--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,4 @@
 @import 'style/nullstyle'; // styles zeroing 
 @import 'style/footer'; // styles footer 
 @import 'style/body'; // styles body 
+@import 'style/media'; // styles media 1024 / 768 / 378px
