--- a/src/style/body.scss
+++ b/src/style/body.scss
@@ -5,3 +5,9 @@
 	padding: 15px;
 	background-color: rgb(196,228,231);
 }
+.body__container{
+	width: 100%;
+	height: 100%;
+	position: relative;
+	padding: 15px;
+}
