--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -4,12 +4,11 @@
 	position: absolute;
 	padding: 30px;
 	max-width: 850px;
-	max-height: 480px;
 	background-color: #fff;
 	left: 0;
 	right: 0;
 	margin: 0 auto;
-	top:calc(50% - 240px);
+	bottom:calc(50% - 240px);
 	border-radius: 30px;
 				.container__header{
 					position: absolute;
@@ -119,7 +118,7 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-around;
-		width: 400px;
+		max-width: 400px;
 		height: 400px;
 		background-color:rgb(0,71,75);
 		border-radius: 15px;
@@ -128,8 +127,8 @@
 			.mainwindow__row{
 				display: flex;
 				justify-content: space-between;
-				width: 100%;
-				height: 100px;
+				max-width: 100%;
+				max-height: 100px;
 				padding: 30px;
 					.row__title {
 						padding: 0px 0px 0px 0px;
@@ -156,7 +155,7 @@
 				text-transform: uppercase;
 				margin: 0px 0px 0px 40px;
 				color: rgb(0,71,75);
-				border-radius: 20px;
+				border-radius: 10px;
 				background-color: rgb(38,194,173);
 			}
 			
