--- a/src/index.scss
+++ b/src/index.scss
@@ -4,3 +4,4 @@
 @import 'style/footer'; // styles footer 
 @import 'style/body'; // styles body 
 @import 'style/media'; // styles media 1024 / 768 / 378px
+@import 'style/hover'; // Managing pseudo-classes
