--- a/src/style/media.scss
+++ b/src/style/media.scss
@@ -64,27 +64,104 @@
 	}
 }
 @media screen and (max-width: 780px) {
+	body{
+		padding: 10px !important;
+	}
 	.container__mainwindow{
-		max-width: 575px;
+		max-width: 575px !important;
+		padding: 10px 0px 0px 0px;
 		flex-direction: column;
 		left: 0;
 		right: 0;
 		margin: 0 auto;
 		bottom:calc(50% - 417px);
 		.container__header{
-			top: -10%;
+			top: -9%;
 		}
 		.mainwindow__contentleft{
 					max-width: 250px;
 					margin-left: calc(50% - 150px);
 						.mainwindow__payment {
+							margin-bottom: 10px;
 							.payment__title {
 							}
 							.payment__content{
 								.payment__input {
 									padding: 5px;
 									margin: 5px 0px;
-									}
+								}
+								.payment__icon {
+								}
+							}
+						}
+						
+	
+						.mainwindow__tips {
+							margin: 0px 0px 20px 0px;
+								.tips__title {
+								}
+							.tips__content{
+								.tips__item{
+									width: 90px;
+								}
+								#Custom{
+									font-size: 16px;
+								}
+							}
+						}
+						.mainwindow__people {
+							.people__title {
+							}
+							.people__content{
+								.people__input {
+									padding: 5px;
+								}
+								.people__icon {
+								}
+							}
+						}
+					}
+		.mainwindow__contentright{
+			max-width: 350px;
+			margin-left: calc(50% - 175px);
+			padding: 0px 0px 0px 0px;
+				.mainwindow__row{
+						.row__title {
+							margin-right: 0px;
+						}
+						.row__title span{
+						}
+						.row__amount {
+						}
+				}
+				.mainwindow__button button{
+					margin-left: calc(50% - 150px);
+				}
+				
+		}
+	
+	
+	}
+}
+@media screen and (max-height: 740px) {
+	body{
+	}
+	.container__mainwindow{
+		bottom:calc(50% - 534px);
+		.container__header{
+		}
+		.mainwindow__contentleft{
+					max-width: 250px;
+					margin-left: calc(50% - 150px);
+						.mainwindow__payment {
+							margin-bottom: 10px;
+							.payment__title {
+							}
+							.payment__content{
+								.payment__input {
+									padding: 5px;
+									margin: 5px 0px;
+								}
 								.payment__icon {
 								}
 							}
@@ -116,86 +193,41 @@
 						}
 					}
 		.mainwindow__contentright{
-			max-width: 450px;
-			margin-left: calc(50% - 200px);
-			padding: 0px 0px 0px 0px;
-				.mainwindow__row{
-						.row__title {
-						}
-						.row__title span{
-						}
-						.row__amount {
-						}
-				}
-				.mainwindow__button button{
-					margin-left: calc(50% - 150px);
-				}
-				
-		}
-	
-	
-	}
-}
-@media screen and (max-width: 480px) {
-	body{
-		padding: 10px !important;
-	}
-	.container__mainwindow{
-		max-width: 100vw !important;
-		padding: 10px 0px 0px 0px;
-		.container__header{
-		}
-		.mainwindow__contentleft{
-					max-width: 250px;
-					margin-left: calc(50% - 150px);
-						.mainwindow__payment {
-							margin-bottom: 10px;
-							.payment__title {
-							}
-							.payment__content{
-								.payment__input {
-									}
-								.payment__icon {
-								}
-							}
-						}
-						
-	
-						.mainwindow__tips {
-								.tips__title {
-								}
-							.tips__content{
-								.tips__item{
-								}
-								#Custom{
-								}
-							}
-						}
-						.mainwindow__people {
-							.people__title {
-							}
-							.people__content{
-								.people__input {
-								}
-								.people__icon {
-								}
-							}
-						}
+			max-width: 380px;
+			margin-left: 0;
+			justify-content: flex-start;
+			.mainwindow__row{
+				max-height: 100px;
+				padding: 10px;
+					.row__title {
+						white-space: nowrap;
+						padding: 0px 0px 0px 0px;
+						margin-right: 50px;
+						color: rgb(103,153,158);
+						font-size: 14px;
 					}
-		.mainwindow__contentright{
-			max-width: 350px;
-			margin-left: calc(50% - 175px);
-			padding: 0px 0px 0px 0px;
-				.mainwindow__row{
-						.row__title {
-						}
-						.row__title span{
-						}
-						.row__amount {
-						}
+					.row__title span{
+						display: inline-block;
+						padding: 5px;
+						color: #fff;
+						font-size: 18px;
+					}
+					.row__amount {
+						font-size: 48px;
+						color: rgb(34,193,169);
+					}
 				}
 				.mainwindow__button button{
+					font-size: 28px;
+					border: 1px solid #333;
+					max-width: 300px;
+					opacity: 0.2;
+					padding: 0px 100px;
 					margin-left: calc(50% - 150px);
+					text-transform: uppercase;
+					color: rgb(0,71,75);
+					border-radius: 10px;
+					background-color: rgb(38,194,173);
 				}
 				
 		}
@@ -206,5 +238,113 @@
 @media screen and (max-width: 375px) {
 	body{
 		padding: 0 !important;
+	}
+	.mainwindow__contentleft{
+											// margin-left: calc(50% - 157px) !important;
+			.mainwindow__payment {
+				.payment__title {
+				}
+				.payment__content{
+					.payment__input {
+					}
+					.payment__icon {
+					}
+				}
+			}
+		}
+}
+@media (orientation:landscape) and (max-height: 450px) {
+	body{
+		padding: 15px !important;
+	}
+	.body__container{
+		padding: 0px 0px 0px 0px;
+	}
+	.container__mainwindow{
+		max-width: 675px !important;
+		padding: 10px 0px 0px 0px;
+		flex-direction: row;
+		left: 0;
+		right: 0;
+		margin: 0 auto;
+		bottom:calc(50% - 187px);
+		.container__header{
+			top: -19%;
+		}
+		.mainwindow__contentleft{
+					width: 300px;
+					margin-left: calc(50% - 300px) !important;
+						.mainwindow__payment {
+							margin-bottom: 10px;
+							.payment__title {
+								font-size: 18px;
+							}
+							.payment__content{
+								.payment__input {
+									font-size: 22px;
+									padding: 0px 15px 0px 0px;
+									margin: 5px 0px;
+								}
+								.payment__icon {
+									width: 12px;
+								}
+							}
+						}
+						
+						.mainwindow__tips {
+							margin: 0px 0px 0px 0px;
+								.tips__title {
+									font-size: 18px;
+								}
+							.tips__content{
+								.tips__item{
+									font-size: 16px;
+									width: 80px;
+									padding: 5px;
+								}
+								#Custom{
+									font-size: 18px;
+								}
+							}
+						}
+						.mainwindow__people {
+							margin-top: 15px;
+							.people__title {
+								font-size: 18px;
+							}
+							.people__content{
+								.people__input {
+									font-size: 22px;
+									padding: 0px 15px 0px 0px;
+									height: auto;
+								}
+								.people__icon {
+									width: 10px;
+								}
+							}
+						}
+					}
+		.mainwindow__contentright{
+			max-width: 300px;
+			max-height: 300px;
+			margin-left: calc(50% - 260px);
+			padding: 0px 0px 0px 0px;
+				.mainwindow__row{
+						.row__title {
+							margin: 0px 15px 100px 0px;
+						}
+						.row__title span{
+						}
+						.row__amount {
+						}
+				}
+				.mainwindow__button button{
+					margin-top: 30px;
+					margin-left: calc(50% - 145px);
+				}
+				
+		}
+	
+	
 	}
 }
