--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -44,7 +44,7 @@
 								width: 14px;
 								position: absolute;
 								top:30%;
-								left: 2%;
+								left: 3%;
 							}
 						}
 					}
@@ -65,6 +65,7 @@
 							grid-template-columns: 1fr 1fr 1fr;
 							grid-template-rows: 1fr 1fr;
 							.tips__item{
+								box-shadow: 0 3px 0px rgb(0,34,36);
 								font-size: 24px;
 								color: #fff;
 								margin: 7px;
@@ -74,9 +75,11 @@
 								padding: 10px;
 							}
 							#Custom{
+								box-shadow: none;
 								background-color: rgb(243,248,251);
 								color:rgb(0,71,75);
 								opacity: 0.7;
+								text-align: right;
 							}
 
 						}
@@ -107,7 +110,7 @@
 								width: 14px;
 								position: absolute;
 								top:30%;
-								left: 2%;
+								left: 3%;
 							}
 						}
 					}
@@ -131,7 +134,9 @@
 				max-height: 100px;
 				padding: 30px;
 					.row__title {
+						white-space: nowrap;
 						padding: 0px 0px 0px 0px;
+						margin-right: 50px;
 						color: rgb(103,153,158);
 						font-size: 14px;
 					}
@@ -152,11 +157,12 @@
 				max-width: 300px;
 				opacity: 0.2;
 				padding: 0px 100px;
+				margin-left: calc(50% - 150px);
 				text-transform: uppercase;
-				margin: 0px 0px 0px 40px;
 				color: rgb(0,71,75);
 				border-radius: 10px;
 				background-color: rgb(38,194,173);
+				box-shadow: 0 3px 0px rgb(32,172,151);
 			}
 			
 	}
