--- a/src/index.scss
+++ b/src/index.scss
@@ -5,3 +5,4 @@
 @import 'style/body'; // styles body 
 @import 'style/media'; // styles media 1024 / 768 / 378px
 @import 'style/hover'; // Managing pseudo-classes
+@import 'style/focus'; // focus input
