--- a/src/style/media.scss
+++ b/src/style/media.scss
@@ -24,6 +24,9 @@
 								.tips__item{
 									width: 90px;
 								}
+								.tips__input{
+									width: 90px;
+								}
 								#Custom{
 								}
 							}
@@ -104,6 +107,9 @@
 								.tips__item{
 									width: 90px;
 								}
+								.tips__input{
+									width: 90px;
+								}
 								#Custom{
 									font-size: 16px;
 								}
@@ -174,6 +180,9 @@
 								}
 							.tips__content{
 								.tips__item{
+									width: 90px;
+								}
+								.tips__input{
 									width: 90px;
 								}
 								#Custom{
@@ -298,6 +307,11 @@
 								}
 							.tips__content{
 								.tips__item{
+									font-size: 16px;
+									width: 80px;
+									padding: 5px;
+								}
+								.tips__input{
 									font-size: 16px;
 									width: 80px;
 									padding: 5px;
