--- a/src/style/media.scss
+++ b/src/style/media.scss
@@ -248,6 +248,17 @@
 	body{
 		padding: 0 !important;
 	}
+	.body__container{
+		width: 100%;
+		height: 270px;
+	}
+	.container__header{
+		.container__item{
+		}
+	}
+	.container__mainwindow{
+		width: 380px;
+	}
 	.mainwindow__contentleft{
 											// margin-left: calc(50% - 157px) !important;
 			.mainwindow__payment {
@@ -262,6 +273,8 @@
 			}
 		}
 		.mainwindow__contentright{
+			width: 395px;
+			height: 230px !important;
 				.mainwindow__row{
 						.row__title {
 						}
